# spectecx

./: .gitignore  CONTRIBUTING.md  Makefile  QUICKCHECK.md  README.md
spectec/: .ocamlformat  dune-project  spectec.opam  spectec.opam.locked
spectec/examples/: skeleton.quickcheck  v1-let-in.spectec
spectec/examples/impty/base/: check.quickcheck  spec.spectec
spectec/examples/impty/closure/: spec.spectec
spectec/examples/p4-concrete-old/: 0-aux.spectec  1-syntax.spectec  2.0-domain.spectec  2.1.2-value-aux.spectec  3-numerics.spectec  5.04-typing-relation.spectec  5.05.2-subtype.spectec  5.06.2-typing-expression.spectec  5.13.1-typing-parser-statement.spectec  5.15.2-typing-call-inference.spectec
spectec/examples/p4-concrete/2-static-runtime/: 2.0-domain.spectec  2.1.2-value-aux.spectec  2.2.3-type-aux.spectec  2.7-compile-time-known.spectec
spectec/examples/p4-concrete/4-p4-ir/: 4.0-ir-syntax.spectec  4.1-ir-call-helper.spectec  4.3-annotation.spectec
spectec/examples/p4-concrete/5-typing/: 5.02.2-typing-table-context.spectec  5.03-typing-wellformed.spectec  5.04-typing-relation.spectec  5.05.1-typing-type.spectec  5.05.2-typing-casting.spectec  5.05.3-typing-type-argument.spectec  5.06.1-typing-expression.spectec  5.06.2-typing-expression-eval.spectec  5.08-typing-lvalue.spectec  5.09-typing-parameter.spectec  5.10-typing-statement.spectec  5.11-typing-declaration.spectec  5.13.1-typing-parser-statement.spectec  5.13.3-typing-parser-declaration.spectec  5.14.1-typing-control-table.spectec  5.14.2-typing-control-declaration.spectec  5.15.1-typing-call-convention.spectec  5.15.3-typing-constructor-call.spectec  5.15.4-typing-callable-call.spectec
spectec/examples/p4-concrete/6-dynamic-runtime/: 6.4.1-object.spectec
spectec/examples/p4-concrete/7-instantiation/: 7.02-inst-context.spectec  7.04-inst-expression.spectec  7.06-inst-statement.spectec  7.07-inst-declaration.spectec  7.08-inst-extern-method.spectec  7.09.1-inst-parser-statement.spectec  7.09.2-inst-parser-state.spectec  7.09.3-parser-declaration.spectec  7.10.1-inst-control-table.spectec  7.11.1-inst-constructor.spectec  7.11.2-inst-constructor-call.spectec
spectec/examples/tutorial/: test.quickcheck  v1-let-in.spectec
spectec/lib/: dune  error.ml  spectec.ml  spectec.mli
spectec/lib/backend/splice/: anchor.ml  anchor.mli  cursor.ml  cursor.mli  driver.ml  driver.mli  dune  parser.ml  parser.mli  registry.ml  report.ml  report.mli  store.ml  store.mli
spectec/lib/batch/: batch.ml  batch.mli  dune
spectec/lib/cli/: cli_args.ml  command.ml  config_file.ml  config_file.mli  dune  error_handling.ml  error_handling.mli  spec_source.ml  spec_source.mli  subcommand.ml  subcommand.mli  target_cli.ml  target_cli.mli  task_cli.ml  task_cli.mli
spectec/lib/common/: attempt.ml  dune  error.ml
spectec/lib/common/domain/: lib.ml
spectec/lib/diag/: ansi.ml  ansi.mli  diag.ml  diag.mli  dune  record.ml  record.mli  render.ml  render.mli  source_cache.ml  source_cache.mli
spectec/lib/elaborate/: elab.ml
spectec/lib/envs/: dune  envs.ml
spectec/lib/envs/dynamic/: dynamic.ml
spectec/lib/envs/il/: dune  envs_il.ml  typ.ml  var.ml
spectec/lib/envs/make/: dune
spectec/lib/frontend/: lexer.mll  parser.mly
spectec/lib/hints/: alter.ml  alter.mli  dune  fields.ml  henv.ml  henv.mli  input.ml  registry.ml  registry.mli
spectec/lib/il/core/: typ.ml
spectec/lib/instrumentation/: config.ml  config.mli  dune  hooks.ml  instrumentation.ml  instrumentation.mli  profile.ml  trace.ml
spectec/lib/interface/: dune  interface.ml
spectec/lib/interp/: dune  interp.ml  interp.mli
spectec/lib/interp-il/: interp.ml  runner.ml
spectec/lib/interp-sl/: ctx.ml  interp.ml  typing.ml
spectec/lib/lang/: dune  lang.ml
spectec/lib/p4/: parse.ml
spectec/lib/pass/: dune  pass.ml  pass.mli
spectec/lib/pipeline/: dune
spectec/lib/quickcheck/: QUICKCHECK.md  arbitrary.ml  arbitrary.mli  driver.ml  driver.mli  dune  free_vars.ml  free_vars.mli  gen.ml  gen.mli  generalize.ml  generalize.mli  il_gen.ml  il_gen.mli  manual_gen  manual_gen.ml  manual_gen.mli  premise_eval.ml  premise_eval.mli  property.ml  property.mli  qc_ast.ml  qc_ast.mli  qc_elab.ml  qc_elab.mli  qc_eval_il.ml  qc_ir.ml  qc_ir.mli  qc_parse.ml  qc_parse.mli  quickcheck.ml  quickcheck.mli  random.ml  random.mli  step_budget.ml  step_budget.mli  test.ml  test.mli
spectec/lib/runner/: checkpoint.ml  dune  error.ml  error.mli  runner.ml  target.ml  task.ml
spectec/lib/runtime-dynamic/: typ.ml  value.ml
spectec/lib/runtime-static/: plaintyp.ml
spectec/lib/semantics/: dune  hint.ml  semantics.ml
spectec/lib/suite/: suite.ml  suite.mli
spectec/specs/p4-old/: 5.14.1-typing-control-table.spectec
spectec/targets/impty/: dune  error.ml  impty.ml  lexer.ml  manual_gen.ml  manual_gen.mli  parse.ml
spectec/targets/p4/: dune  p4.ml
spectec/test/: dune  run_il_pos_p4c.expected  run_sl_pos_p4c.expected  test.ml
spectec/test/cli/: batch.t  branch-coverage-full.t  branch-coverage-summary.t  config.t  core.t  dune  help.t  instruction-coverage-full.t  instruction-coverage-summary.t  premise-coverage-full.t  premise-coverage-summary.t  trace-full.t  trace-inputs.t  trace-rules.t  trace-summary.t  tree-conclusion.t  tree-inputs.t  tree-rules.t
spectec/test/elab/: dune  elab.expected  main.ml  p4-old.expected  p4.expected
spectec/test/il/: dune  main.ml  pos.expected
spectec/test/interp/: dune  il-pos.expected  impty-base-il-neg.expected  impty-base-il-pos.expected  impty-base-sl-neg.expected  impty-base-sl-pos.expected  impty-closure-il-neg.expected  impty-closure-il-pos.expected  impty-closure-sl-neg.expected  impty-closure-sl-pos.expected  main.ml  p4-il-pos.expected  p4-old-il-pos.expected  p4-old-sl-neg.expected  p4-old-sl-pos.expected  p4-sl-neg.expected  p4-sl-pos.expected  sl-neg.expected  sl-pos.expected
spectec/test/lib/: dune  exclude.ml  files.ml  stats.ml  suite.ml  timer.ml
spectec/test/sl/: dune  main.ml  neg.expected  pos.expected
spectec/test/struct/: dune  main.ml  p4-old.expected  p4.expected  struct.expected
(+504 files in other folders)
