(test
 (name test)
 (preprocess
  (pps ppx_let))
 (modules test)
 (libraries p4spec core core_kernel core_unix core_unix.command_unix)
 (action
  (progn
   (ignore-outputs
    (diff elab.expected elab.actual))
   ;    (ignore-outputs
   ;     (diff struct.expected struct.actual))
   (ignore-outputs
    (diff run_il_pos_p4c.expected run_il_pos_p4c.actual))
   (ignore-outputs
    (diff run_il_neg_p4c.expected run_il_neg_p4c.actual)))))

(rule
 (target elab.actual)
 (action
  (with-stdout-to
   elab.actual
   (with-stderr-to
    elab.err
    (run ./test.exe elab -s ../../../../spec-concrete)))))

; (rule
;  (target struct.actual)
;  (action
;   (with-stdout-to
;    struct.actual
;    (with-stderr-to
;     struct.err
;     (run ./test.exe struct -s ../../../../spec)))))

(rule
 (target run_il_pos_p4c.actual)
 (action
  (with-stdout-to
   run_il_pos_p4c.actual
   (with-stderr-to
    run_il_pos_p4c.err
    (run
     ./test.exe
     run-il
     -s
     ../../../../spec-concrete
     -i
     ../../../../p4c/p4include
     -e
     ../../../../excludes
     -d
     ../../../../p4c/testdata/p4_16_samples)))))

(rule
 (target run_il_neg_p4c.actual)
 (action
  (with-stdout-to
   run_il_neg_p4c.actual
   (with-stderr-to
    run_il_neg_p4c.err
    (run
     ./test.exe
     run-il
     -s
     ../../../../spec-concrete
     -i
     ../../../../p4c/p4include
     -e
     ../../../../excludes
     -d
     ../../../../p4c/testdata/p4_16_errors
     -neg)))))
