; Test directory - each subdirectory contains its own test executable
;
; Run all tests:     dune test
; Run specific test: dune build @test/elab/runtest
;                    dune build @test/struct/runtest
;                    dune build @test/il/runtest
;                    dune build @test/sl/runtest
;
; Promote changes:   dune promote

(include_subdirs no)
