; Instrumentation - top-level config that depends on core and handlers

(library
 (name instrumentation)
 (public_name spectec.instrumentation)
 (libraries
  instrumentation_api
  instrumentation_config
  instrumentation_dispatcher
  instrumentation_handlers
  instrumentation_spec
  instrumentation_static
  unix))
