; Instrumentation - top-level facade over the internal layers and handlers

(library
 (name instrumentation)
 (public_name spectec.instrumentation)
 (libraries
  instrumentation_api
  instrumentation_common
  instrumentation_config
  instrumentation_dispatcher
  instrumentation_handlers
  instrumentation_spec
  instrumentation_static
  unix))
