(library
 (name quickcheck)
 (public_name spectec.quickcheck)
 (libraries
  spectec.lang.il
  spectec.lang.el
  spectec.quickcheck.il
  spectec.interp
  spectec.interp.eval_il
  spectec.instrumentation
  spectec.instrumentation.api
  spectec.instrumentation.common
  spectec.common
  spectec.diagnostic
  bignum.bigint
  unix))
