(executable
 (name main)
 (preprocess
  (pps ppx_let))
 (libraries test_lib core core_unix core_unix.command_unix))

(rule
 (target elab.actual)
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    elab.err
    (run ./main.exe -s ../../../../../examples/p4-concrete)))))

(rule
 (alias runtest)
 (action
  (diff elab.expected elab.actual)))
