(executable
 (name main)
 (preprocess
  (pps ppx_let))
 (libraries test_lib core core_unix core_unix.command_unix))

(rule
 (target p4-old.actual)
 (deps
  (source_tree ../../specs/p4-old))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    p4-old.err
    (run ./main.exe -s ../../../../../spectec/specs/p4-old)))))

(rule
 (alias runtest)
 (action
  (diff p4-old.expected p4-old.actual)))

(rule
 (target p4.actual)
 (deps
  (source_tree ../../specs/p4))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    p4.err
    (run ./main.exe -s ../../../../../spectec/specs/p4)))))

(rule
 (alias runtest)
 (action
  (diff p4.expected p4.actual)))
