; Interpreter test executable (unified IL/SL with --sl flag)

(executable
 (name main)
 (preprocess
  (pps ppx_let))
 (libraries test_lib targets_p4 core core_unix core_unix.command_unix))

;; IL Positive tests (expect success, default IL mode)

(rule
 (target il-pos.actual)
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    il-pos.err
    (run
     ./main.exe
     -i
     ../../../../../tests/interp/p4-tests/includes
     -e
     ../../../../../tests/interp/p4-tests/excludes
     -d
     ../../../../../tests/interp/p4-tests/tests/p4_16_samples)))))

(rule
 (alias il-pos)
 (action
  (progn
   (run cat il-pos.err)
   (diff il-pos.expected il-pos.actual))))

;; IL Negative tests (expect failure, default IL mode)

(rule
 (target il-neg.actual)
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    il-neg.err
    (run
     ./main.exe
     -neg
     -i
     ../../../../../tests/interp/p4-tests/includes
     -e
     ../../../../../tests/interp/p4-tests/excludes
     -d
     ../../../../../tests/interp/p4-tests/tests/p4_16_errors)))))

(rule
 (alias il-neg)
 (action
  (progn
   (run cat il-neg.err)
   (diff il-neg.expected il-neg.actual))))

;; SL Positive tests (expect success, with --sl flag)

(rule
 (target sl-pos.actual)
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    sl-pos.err
    (run
     ./main.exe
     --sl
     -i
     ../../../../../tests/interp/p4-tests/includes
     -e
     ../../../../../tests/interp/p4-tests/excludes
     -d
     ../../../../../tests/interp/p4-tests/tests/p4_16_samples)))))

(rule
 (alias sl-pos)
 (action
  (progn
   (run cat sl-pos.err)
   (diff sl-pos.expected sl-pos.actual))))

;; SL Negative tests (expect failure, with --sl flag)

(rule
 (target sl-neg.actual)
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    sl-neg.err
    (run
     ./main.exe
     --sl
     -neg
     -i
     ../../../../../tests/interp/p4-tests/includes
     -e
     ../../../../../tests/interp/p4-tests/excludes
     -d
     ../../../../../tests/interp/p4-tests/tests/p4_16_errors)))))

(rule
 (alias sl-neg)
 (action
  (progn
   (run cat sl-neg.err)
   (diff sl-neg.expected sl-neg.actual))))

;; Combined aliases for running all tests

(alias
 (name il)
 (deps
  (alias il-pos)
  (alias il-neg)))

(alias
 (name sl)
 (deps
  (alias sl-pos)
  (alias sl-neg)))

(alias
 (name runtest)
 (deps
  (alias il)
  (alias sl)))
