; Interpreter test executable (unified IL/SL with --sl flag)

(executable
 (name main)
 (preprocess
  (pps ppx_let))
 (libraries
  test_lib
  targets_p4
  targets_impty
  core
  core_unix
  core_unix.command_unix))

;; ============================================================
;; p4-old target tests
;; ============================================================

;; IL Positive tests (expect success, default IL mode)

(rule
 (target p4-old-il-pos.actual)
 (deps
  (source_tree ../../examples/p4-concrete-old)
  (source_tree ../../testdata/interp/p4-tests/includes)
  (source_tree ../../testdata/interp/p4-tests/excludes)
  (source_tree ../../testdata/interp/p4-tests/tests/p4_16_samples))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    p4-old-il-pos.err
    (run
     ./main.exe
     --p4-old
     -i
     ../../../../../spectec/testdata/interp/p4-tests/includes
     -e
     ../../../../../spectec/testdata/interp/p4-tests/excludes
     -d
     ../../../../../spectec/testdata/interp/p4-tests/tests/p4_16_samples)))))

(rule
 (alias p4-old-il-pos)
 (deps p4-old-il-pos.err p4-old-il-pos.actual)
 (action
  (diff p4-old-il-pos.expected p4-old-il-pos.actual)))

;; IL Negative tests (expect failure, default IL mode)

(rule
 (target p4-old-il-neg.actual)
 (deps
  (source_tree ../../examples/p4-concrete-old)
  (source_tree ../../testdata/interp/p4-tests/includes)
  (source_tree ../../testdata/interp/p4-tests/excludes)
  (source_tree ../../testdata/interp/p4-tests/tests/p4_16_errors))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    p4-old-il-neg.err
    (run
     ./main.exe
     --p4-old
     -neg
     -i
     ../../../../../spectec/testdata/interp/p4-tests/includes
     -e
     ../../../../../spectec/testdata/interp/p4-tests/excludes
     -d
     ../../../../../spectec/testdata/interp/p4-tests/tests/p4_16_errors)))))

(rule
 (alias p4-old-il-neg)
 (deps p4-old-il-neg.err p4-old-il-neg.actual)
 (action
  (diff p4-old-il-neg.expected p4-old-il-neg.actual)))

;; SL Positive tests (expect success, with --sl flag)

(rule
 (target p4-old-sl-pos.actual)
 (deps
  (source_tree ../../examples/p4-concrete-old)
  (source_tree ../../testdata/interp/p4-tests/includes)
  (source_tree ../../testdata/interp/p4-tests/excludes)
  (source_tree ../../testdata/interp/p4-tests/tests/p4_16_samples))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    p4-old-sl-pos.err
    (run
     ./main.exe
     --p4-old
     --sl
     -i
     ../../../../../spectec/testdata/interp/p4-tests/includes
     -e
     ../../../../../spectec/testdata/interp/p4-tests/excludes
     -d
     ../../../../../spectec/testdata/interp/p4-tests/tests/p4_16_samples)))))

(rule
 (alias p4-old-sl-pos)
 (deps p4-old-sl-pos.err p4-old-sl-pos.actual)
 (action
  (diff p4-old-sl-pos.expected p4-old-sl-pos.actual)))

;; SL Negative tests (expect failure, with --sl flag)

(rule
 (target p4-old-sl-neg.actual)
 (deps
  (source_tree ../../examples/p4-concrete-old)
  (source_tree ../../testdata/interp/p4-tests/includes)
  (source_tree ../../testdata/interp/p4-tests/excludes)
  (source_tree ../../testdata/interp/p4-tests/tests/p4_16_errors))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    p4-old-sl-neg.err
    (run
     ./main.exe
     --p4-old
     --sl
     -neg
     -i
     ../../../../../spectec/testdata/interp/p4-tests/includes
     -e
     ../../../../../spectec/testdata/interp/p4-tests/excludes
     -d
     ../../../../../spectec/testdata/interp/p4-tests/tests/p4_16_errors)))))

(rule
 (alias p4-old-sl-neg)
 (deps p4-old-sl-neg.err p4-old-sl-neg.actual)
 (action
  (diff p4-old-sl-neg.expected p4-old-sl-neg.actual)))

;; ============================================================
;; p4 (new spec) target tests
;; ============================================================

;; IL Positive tests (expect success, default IL mode)

(rule
 (target p4-il-pos.actual)
 (deps
  (source_tree ../../examples/p4-concrete)
  (source_tree ../../testdata/interp/p4-tests/includes)
  (source_tree ../../testdata/interp/p4-tests/excludes)
  (source_tree ../../testdata/interp/p4-tests/tests/p4_16_samples))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    p4-il-pos.err
    (run
     ./main.exe
     -i
     ../../../../../spectec/testdata/interp/p4-tests/includes
     -e
     ../../../../../spectec/testdata/interp/p4-tests/excludes
     -d
     ../../../../../spectec/testdata/interp/p4-tests/tests/p4_16_samples)))))

(rule
 (alias p4-il-pos)
 (deps p4-il-pos.err p4-il-pos.actual)
 (action
  (diff p4-il-pos.expected p4-il-pos.actual)))

;; IL Negative tests (expect failure, default IL mode)

(rule
 (target p4-il-neg.actual)
 (deps
  (source_tree ../../examples/p4-concrete)
  (source_tree ../../testdata/interp/p4-tests/includes)
  (source_tree ../../testdata/interp/p4-tests/excludes)
  (source_tree ../../testdata/interp/p4-tests/tests/p4_16_errors))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    p4-il-neg.err
    (run
     ./main.exe
     -neg
     -i
     ../../../../../spectec/testdata/interp/p4-tests/includes
     -e
     ../../../../../spectec/testdata/interp/p4-tests/excludes
     -d
     ../../../../../spectec/testdata/interp/p4-tests/tests/p4_16_errors)))))

(rule
 (alias p4-il-neg)
 (deps p4-il-neg.err p4-il-neg.actual)
 (action
  (diff p4-il-neg.expected p4-il-neg.actual)))

;; SL Positive tests (expect success, with --sl flag)

(rule
 (target p4-sl-pos.actual)
 (deps
  (source_tree ../../examples/p4-concrete)
  (source_tree ../../testdata/interp/p4-tests/includes)
  (source_tree ../../testdata/interp/p4-tests/excludes)
  (source_tree ../../testdata/interp/p4-tests/tests/p4_16_samples))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    p4-sl-pos.err
    (run
     ./main.exe
     --sl
     -i
     ../../../../../spectec/testdata/interp/p4-tests/includes
     -e
     ../../../../../spectec/testdata/interp/p4-tests/excludes
     -d
     ../../../../../spectec/testdata/interp/p4-tests/tests/p4_16_samples)))))

(rule
 (alias p4-sl-pos)
 (deps p4-sl-pos.err p4-sl-pos.actual)
 (action
  (diff p4-sl-pos.expected p4-sl-pos.actual)))

;; SL Negative tests (expect failure, with --sl flag)

(rule
 (target p4-sl-neg.actual)
 (deps
  (source_tree ../../examples/p4-concrete)
  (source_tree ../../testdata/interp/p4-tests/includes)
  (source_tree ../../testdata/interp/p4-tests/excludes)
  (source_tree ../../testdata/interp/p4-tests/tests/p4_16_errors))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    p4-sl-neg.err
    (run
     ./main.exe
     --sl
     -neg
     -i
     ../../../../../spectec/testdata/interp/p4-tests/includes
     -e
     ../../../../../spectec/testdata/interp/p4-tests/excludes
     -d
     ../../../../../spectec/testdata/interp/p4-tests/tests/p4_16_errors)))))

(rule
 (alias p4-sl-neg)
 (deps p4-sl-neg.err p4-sl-neg.actual)
 (action
  (diff p4-sl-neg.expected p4-sl-neg.actual)))

;; ============================================================
;; impty target tests (base variant)
;; ============================================================

;; IL Positive

(rule
 (target impty-base-il-pos.actual)
 (deps
  (source_tree ../../examples/impty/base)
  (source_tree ../../testdata/interp/impty/base))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    impty-base-il-pos.err
    (run
     ./main.exe
     --impty
     --variant
     base
     -d
     ../../../../../spectec/testdata/interp/impty/base)))))

(rule
 (alias impty-base-il-pos)
 (deps impty-base-il-pos.err impty-base-il-pos.actual)
 (action
  (diff impty-base-il-pos.expected impty-base-il-pos.actual)))

;; IL Negative

(rule
 (target impty-base-il-neg.actual)
 (deps
  (source_tree ../../examples/impty/base)
  (source_tree ../../testdata/interp/impty/base))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    impty-base-il-neg.err
    (run
     ./main.exe
     --impty
     --variant
     base
     -neg
     -d
     ../../../../../spectec/testdata/interp/impty/base)))))

(rule
 (alias impty-base-il-neg)
 (deps impty-base-il-neg.err impty-base-il-neg.actual)
 (action
  (diff impty-base-il-neg.expected impty-base-il-neg.actual)))

;; SL Positive

(rule
 (target impty-base-sl-pos.actual)
 (deps
  (source_tree ../../examples/impty/base)
  (source_tree ../../testdata/interp/impty/base))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    impty-base-sl-pos.err
    (run
     ./main.exe
     --impty
     --variant
     base
     --sl
     -d
     ../../../../../spectec/testdata/interp/impty/base)))))

(rule
 (alias impty-base-sl-pos)
 (deps impty-base-sl-pos.err impty-base-sl-pos.actual)
 (action
  (diff impty-base-sl-pos.expected impty-base-sl-pos.actual)))

;; SL Negative

(rule
 (target impty-base-sl-neg.actual)
 (deps
  (source_tree ../../examples/impty/base)
  (source_tree ../../testdata/interp/impty/base))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    impty-base-sl-neg.err
    (run
     ./main.exe
     --impty
     --variant
     base
     --sl
     -neg
     -d
     ../../../../../spectec/testdata/interp/impty/base)))))

(rule
 (alias impty-base-sl-neg)
 (deps impty-base-sl-neg.err impty-base-sl-neg.actual)
 (action
  (diff impty-base-sl-neg.expected impty-base-sl-neg.actual)))

;; ============================================================
;; impty target tests (closure variant)
;; ============================================================

;; IL Positive

(rule
 (target impty-closure-il-pos.actual)
 (deps
  (source_tree ../../examples/impty/closure)
  (source_tree ../../testdata/interp/impty/base)
  (source_tree ../../testdata/interp/impty/closure))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    impty-closure-il-pos.err
    (run
     ./main.exe
     --impty
     --variant
     closure
     -d
     ../../../../../spectec/testdata/interp/impty/base
     -d
     ../../../../../spectec/testdata/interp/impty/closure)))))

(rule
 (alias impty-closure-il-pos)
 (deps impty-closure-il-pos.err impty-closure-il-pos.actual)
 (action
  (diff impty-closure-il-pos.expected impty-closure-il-pos.actual)))

;; IL Negative

(rule
 (target impty-closure-il-neg.actual)
 (deps
  (source_tree ../../examples/impty/closure)
  (source_tree ../../testdata/interp/impty/base)
  (source_tree ../../testdata/interp/impty/closure))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    impty-closure-il-neg.err
    (run
     ./main.exe
     --impty
     --variant
     closure
     -neg
     -d
     ../../../../../spectec/testdata/interp/impty/base
     -d
     ../../../../../spectec/testdata/interp/impty/closure)))))

(rule
 (alias impty-closure-il-neg)
 (deps impty-closure-il-neg.err impty-closure-il-neg.actual)
 (action
  (diff impty-closure-il-neg.expected impty-closure-il-neg.actual)))

;; SL Positive

(rule
 (target impty-closure-sl-pos.actual)
 (deps
  (source_tree ../../examples/impty/closure)
  (source_tree ../../testdata/interp/impty/base)
  (source_tree ../../testdata/interp/impty/closure))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    impty-closure-sl-pos.err
    (run
     ./main.exe
     --impty
     --variant
     closure
     --sl
     -d
     ../../../../../spectec/testdata/interp/impty/base
     -d
     ../../../../../spectec/testdata/interp/impty/closure)))))

(rule
 (alias impty-closure-sl-pos)
 (deps impty-closure-sl-pos.err impty-closure-sl-pos.actual)
 (action
  (diff impty-closure-sl-pos.expected impty-closure-sl-pos.actual)))

;; SL Negative

(rule
 (target impty-closure-sl-neg.actual)
 (deps
  (source_tree ../../examples/impty/closure)
  (source_tree ../../testdata/interp/impty/base)
  (source_tree ../../testdata/interp/impty/closure))
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    impty-closure-sl-neg.err
    (run
     ./main.exe
     --impty
     --variant
     closure
     --sl
     -neg
     -d
     ../../../../../spectec/testdata/interp/impty/base
     -d
     ../../../../../spectec/testdata/interp/impty/closure)))))

(rule
 (alias impty-closure-sl-neg)
 (deps impty-closure-sl-neg.err impty-closure-sl-neg.actual)
 (action
  (diff impty-closure-sl-neg.expected impty-closure-sl-neg.actual)))

;; ============================================================
;; Combined aliases for running all tests
;; ============================================================

(alias
 (name p4-old-il)
 (deps
  (alias p4-old-il-pos)
  (alias p4-old-il-neg)))

(alias
 (name p4-old-sl)
 (deps
  (alias p4-old-sl-pos)
  (alias p4-old-sl-neg)))

(alias
 (name p4-il)
 (deps
  (alias p4-il-pos)
  (alias p4-il-neg)))

(alias
 (name p4-sl)
 (deps
  (alias p4-sl-pos)
  (alias p4-sl-neg)))

(alias
 (name impty-base-il)
 (deps
  (alias impty-base-il-pos)
  (alias impty-base-il-neg)))

(alias
 (name impty-base-sl)
 (deps
  (alias impty-base-sl-pos)
  (alias impty-base-sl-neg)))

(alias
 (name impty-closure-il)
 (deps
  (alias impty-closure-il-pos)
  (alias impty-closure-il-neg)))

(alias
 (name impty-closure-sl)
 (deps
  (alias impty-closure-sl-pos)
  (alias impty-closure-sl-neg)))

(alias
 (name impty-base)
 (deps
  (alias impty-base-il)
  (alias impty-base-sl)))

(alias
 (name impty-closure)
 (deps
  (alias impty-closure-il)
  (alias impty-closure-sl)))

(alias
 (name impty)
 (deps
  (alias impty-base)
  (alias impty-closure)))

(alias
 (name runtest)
 (deps
  (alias p4-old-il)
  (alias p4-old-sl)
  (alias p4-il)
  (alias p4-sl)
  (alias impty)))
