(executable
 (name main)
 (preprocess
  (pps ppx_let))
 (libraries test_lib core core_unix core_unix.command_unix))

;; Positive tests (expect success)

(rule
 (target pos.actual)
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    pos.err
    (run
     ./main.exe
     -s
     ../../../../../examples/p4-concrete
     -i
     ../../../../../tests/interp/p4-tests/includes
     -e
     ../../../../../tests/interp/p4-tests/excludes
     -d
     ../../../../../tests/interp/p4-tests/tests/p4_16_samples)))))

(rule
 (alias pos)
 (action
  (diff pos.expected pos.actual)))

;; Negative tests (expect failure)

(rule
 (target neg.actual)
 (action
  (with-stdout-to
   %{target}
   (with-stderr-to
    neg.err
    (run
     ./main.exe
     -neg
     -s
     ../../../../../examples/p4-concrete
     -i
     ../../../../../tests/interp/p4-tests/includes
     -e
     ../../../../../tests/interp/p4-tests/excludes
     -d
     ../../../../../tests/interp/p4-tests/tests/p4_16_errors)))))

(rule
 (alias neg)
 (action
  (diff neg.expected neg.actual)))

;; Default runtest runs both positive and negative

(alias
 (name runtest)
 (deps
  (alias pos)
  (alias neg)))
